fix snag imported font not working on safari, add breakpoint min-width 320px for gifts section, adjust background-img-wrapper size and add min/mac-heights/widths.

--- a/src/components/Gifts/styles.css
+++ b/src/components/Gifts/styles.css
@@ -75,16 +75,22 @@
   }
 }
 #gifts .background-img-wrapper {
+  justify-self: center;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
   overflow: hidden;
+  height: 50%;
+  min-height: 208.8px;
+  width: 100%;
+  min-width: 657.6%;
+  margin-top: 20%;
 }
 
 #gifts .background-img {
   width: 350px;
   height: 350px;
-  margin: 0 2.2rem 3rem;
+  margin: 0 2.2rem;
   animation-name: rotation;
   animation-duration: 5s;
   animation-fill-mode: forwards;
@@ -100,21 +106,17 @@
 }
 
 /*//////////////////////////////////////////Media Queries /////////////////////////////////////*/
-@media (min-width: 3000px) {
+@media (min-width: 1824px) {
   .gift-icon-wrapper {
     height: 100.1px;
     width: 84.7px;
     background-size: 423.5px 600.6px;
   }
 
-  #gifts .background-img-wrapper {
-    height: 50%;
-    margin-top: 25%;
-  }
   #gifts .background-img {
     width: 400px;
     height: 400px;
-    margin: 0 1rem 3rem;
+    margin: 0 1rem;
   }
 }
 
@@ -131,16 +133,20 @@
     background-size: 308px 436.8px;
   }
 
+  #gifts .background-img-wrapper {
+    margin-top: 28%;
+  }
+
   #gifts .background-img {
     width: 200px;
     height: 200px;
-    margin: 0 1.8rem 1.8rem;
+    margin: 0 1.8rem;
   }
 }
 
-@media (max-width: 415px) {
+@media (max-width: 480px) {
   #gifts .information-wrapper {
-    margin-top: 1.5rem;
+    margin-top: 0.5rem;
     width: 90%;
   }
   #gifts .description {
@@ -153,7 +159,9 @@
     background-image: url(../../Images/gift_large.png);
     background-size: 231px 327.6px;
   }
-
+  #gifts .background-img-wrapper {
+    margin-top: 50%;
+  }
   #gifts .background-img-0,
   #gifts .background-img-2 {
     display: none;
@@ -162,6 +170,23 @@
   #gifts .background-img-1 {
     width: 180px;
     height: 180px;
-    margin: 0 1.8rem 1.8rem;
+  }
+}
+
+@media (max-width: 320px) {
+  #gifts .product-title {
+    font-size: 25px;
+  }
+  #gifts .cta-link {
+    font-size: 12px;
+  }
+
+  #gifts .background-img-wrapper {
+    margin-top: 50%;
+  }
+
+  #gifts .background-img-1 {
+    width: 150px;
+    height: 150px;
   }
 }
