--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -19,7 +19,6 @@
   align-items: center;
   list-style-type: none;
   color: rgb(214, 214, 214);
-  font-family: 'SF Pro Text';
   font-size: 13px;
   font-weight: 400;
   line-height: 25px;
