--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,7 @@ a {
 body {
   width: 100%;
   height: 100%;
+  font-family: -apple-system, 'SF Pro Text', Helvetica, sans-serif;
 }
 
 /*/ ///////////////////////////////LARGE PRODUCT SECTION/////////////////////*/
@@ -32,7 +33,6 @@ body {
   align-items: center;
   margin-top: 0.5rem;
   text-align: center;
-  font-family: 'SF Pro Text';
   background-color: black;
 }
 
@@ -130,9 +130,15 @@ body {
 }
 
 .small-unit .information-wrapper {
-  margin: 1rem 0;
+  margin: 0;
 }
 
+.small-unit .detail {
+  margin-top: 1rem;
+}
+.small-unit .cta-link-wrapper {
+  margin-bottom: 1rem;
+}
 /*/ //////////////////////////////SMALL UNIT-apple tv & fitness /////////////////////*/
 
 #AppleTV .information-wrapper,
@@ -181,6 +187,9 @@ body {
   }
   .information-wrapper {
     width: 60%;
+  }
+  .small-unit .information-wrapper {
+    margin: 0 0 1rem;
   }
   .product-wrapper .detail {
     font-size: 14px;
